# karel

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  README.txt  karel.kdev4  main.cpp  ruka.blend  ruka.blend1  ruka.blend2
.kdev4/: karel.kdev4
ming-sdl/archives/: sdlcfgfix.patch
objTester/: CMakeCache.txt  CMakeLists.txt  Makefile
stb_image/: CMakeLists.txt  Makefile  stb_image.h
win32/: stderr.txt  stdout.txt
